--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -1,11 +1,11 @@
 .card-container{
-    display:flex;
-    flex-direction: row;
-    justify-content: center;  
-    background-color: rgb(43, 255, 0);
-    grid-gap: 100px;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    display: grid;
+    padding: 30px;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 30px;
+    row-gap: 30px;
+    justify-items: center;
+    margin-top:150px;
 }
 
 
