--- a/src/components/cards.css
+++ b/src/components/cards.css
@@ -9,3 +9,33 @@
 }
 
 
+@media only screen and (min-width:320px) {
+    .card-container{
+        grid-template-columns: 1fr;
+        padding-left:0px;
+    }
+}
+
+
+@media only screen and (min-width: 800px) {
+    .card-container {
+      grid-template-columns: 1fr ;
+    }
+  }
+  @media only screen and (min-width: 1024px){
+      .card-container{
+          grid-template-columns: 1fr;
+      } 
+  }
+
+  @media only screen and (min-width: 1440px) {
+      .card-container{
+          grid-template-columns:1fr 1fr 1fr;
+      }
+  }
+
+  /* @media only screen and (min-width: 1441px){
+      .grid-container{
+          grid-template-columns: 1fr 1fr 1fr;
+      }
+  } */
