--- a/src/components/video.css
+++ b/src/components/video.css
@@ -22,3 +22,9 @@
     left: 50%;
     transform: translate(-50%,-50%);
   }
+
+  @media only screen and (max-width: 800px) {
+    .video-container {
+      display: none;
+    }
+  }
