--- a/src/components/explore.css
+++ b/src/components/explore.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Basic:ital@1&display=swap');
+
+
 .explore-container{
 display: grid;
 grid-template-columns: 1fr 1fr 1fr;
@@ -28,10 +31,14 @@ grid-gap: 3px;
    
 }
 #box-3{
-    background-color: blue;
+    background-color: none;
     grid-area:boxThree;
-    border: 2px solid rgb(18, 49, 75);
-    border-radius: 10px;
+    /* border: 2px solid rgb(18, 49, 75);
+    border-radius: 10px; */
+    color:rgb(34, 31, 31);
+    font-size: 40px;
+    font-family: 'Gentium Book Basic', serif;
+    margin:auto;
 }
 #box-4{
     background-color: none;
