--- a/src/components/explore.css
+++ b/src/components/explore.css
@@ -12,10 +12,14 @@ grid-gap: 3px;
 }
 
 #box-1{
-    background-color: orange;
+    background-color: none;
     grid-area: boxOne;
-    border: 2px solid rgb(18, 49, 75);
-    border-radius: 10px;
+    /* border: 2px solid rgb(18, 49, 75);
+    border-radius: 10px; */
+    color:rgb(34, 31, 31);
+    font-size: 40px;
+    font-family: 'Gentium Book Basic', serif;
+    margin:auto;
 }
 #box-2{
     background-color:none;
