--- a/src/components/explore.css
+++ b/src/components/explore.css
@@ -62,6 +62,7 @@ grid-gap: 35px;
     /* border: 2px solid rgb(18, 49, 75);
     border-radius: 10px; */
     cursor: pointer;
+    padding-right: 25px;
 }
 
 #box-5-img{
