--- a/src/components/explore.css
+++ b/src/components/explore.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Gentium+Book+Basic:ital@1&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Tinos:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Tinos&display=swap');
 
 .explore-container{
 display: grid;
@@ -89,4 +90,24 @@ grid-gap: 35px;
     #box-3{
         display: none;
     }
+}
+
+.explore-heading{
+font-size: 25px;
+font-family: 'Tinos', serif;
+}
+
+.explore-paragraph{
+font-size: 25px;
+font-family: 'Tinos', serif;
+
+}
+
+.explore-button{
+background-color:rgb(60, 189, 206);
+color:white;
+width:150px;
+height: 50px;
+letter-spacing: 1.5px;
+font-weight: bolder;
 }
