left left border of box 2 and removed all other borders on box 2 in order to make a line style between divs

--- a/src/components/footerfinal.css
+++ b/src/components/footerfinal.css
@@ -21,7 +21,9 @@
     font-size: 12px;
     line-height: 30px;
    padding-left: 180px;
-   
+   border-bottom-width: 0;
+   border-top-width: 0;
+   border-right-width: 0;
 }
 
 
