--- a/src/components/footerfinal.css
+++ b/src/components/footerfinal.css
@@ -17,7 +17,7 @@
 
 .flex-lists{
     display: flex;
-    border: 3px solid green;
+    border: 3px solid rgb(0, 0, 0);
     font-size: 12px;
     line-height: 30px;
    padding-left: 180px;
@@ -29,7 +29,7 @@
 
 .email-box{
     /* text-align: right; */
-    border: 3px solid blue;
+    border: 3px solid rgb(0, 0, 0);
     position: relative;
     right:100px;
     padding-left: 100px;
