--- a/src/components/footerfinal.css
+++ b/src/components/footerfinal.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: center;
     gap: 15em;
+    padding-bottom:50px;
 }
 
 .section{
@@ -17,7 +18,7 @@
 
 a.flex-lists{
     display: flex;
-    border: 3px solid rgb(0, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
     font-size: 12px;
     line-height: 30px;
    padding-left: 180px;
@@ -32,7 +33,7 @@ a.flex-lists{
 
 .email-box{
     /* text-align: right; */
-    border: 3px solid rgb(0, 0, 0);
+    border: 1px solid rgb(0, 0, 0);
     position: relative;
     right:100px;
     padding-left: 100px;
