--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,3 +2,11 @@ div.MuiTabs-flexContainer{
     background-color: white;
     color: black;
 }
+
+/* .PrivateTabIndicator-colorSecondary-4{
+    background-color: rgb(18, 18, 175);
+} */
+
+.PrivateTabIndicator-colorSecondary-4 {
+    background-color: white;
+}
