first image fixed

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,6 +1,8 @@
 div.MuiTabs-flexContainer{
+    position: fixed;
     background-color: white;
     color: black;
+    width: 100%;
 }
 
 /* .PrivateTabIndicator-colorSecondary-4{
@@ -9,4 +11,5 @@ div.MuiTabs-flexContainer{
 
 .PrivateTabIndicator-colorSecondary-4 {
     background-color: white;
+    position: fixed;
 }
